1.10.3	2011-07-27

	* add GZip string encoder

1.10.2	2011-07-18

	* Maintain a map of already visited objects incase someone
	creates a circular of config objects.  
	* Make Duration hashable.  
	* Promise.on{Success, Failure}: returned chained future.
